--- a/404.html
+++ b/404.html
@@ -1,6 +1,13 @@
 ---
 permalink: /404.html
 layout: default
+:doctype: book
+:page-authors: 
+:table-caption: Data Set
+:imagesdir: /Media/Images/
+:page-draft_complete: 100%
+:page-stage: NoShow
+:page-todos: 
 ---
 
 <style type="text/css" media="screen">
